# k2hs

./: .gitignore  .travis.yml  Dockerfile  README.md  k2hs.cabal  main.hs
src/Database/: K2Hash.hsc
